--- a/src/RBACSample/Views/MainWindow.xaml
+++ b/src/RBACSample/Views/MainWindow.xaml
@@ -1,12 +1,19 @@
-﻿<Window x:Class="RBACSample.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RBACSample"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="RBACSample.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:RBACSample"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:RBACSample.ViewModels"
+    xmlns:views="clr-namespace:RBACSample.Views"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    d:DataContext="{d:DesignInstance viewmodels:MainWindowViewModel}"
+    mc:Ignorable="d">
 
     <Grid>
+        <Frame Content="{Binding CurrentPage}" />
     </Grid>
 </Window>
