--- a/src/RBACSample/Views/Pages/LoginPage.xaml
+++ b/src/RBACSample/Views/Pages/LoginPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helper="clr-namespace:RBACSample.Helper"
     xmlns:local="clr-namespace:RBACSample.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="clr-namespace:RBACSample.ViewModels"
@@ -42,10 +43,10 @@
                     Grid.Column="0"
                     VerticalAlignment="Center"
                     Text="Password: " />
-                <TextBox
+                <PasswordBox
                     Grid.Column="1"
                     VerticalContentAlignment="Center"
-                    Text="{Binding Password}" />
+                    PasswordChanged="PasswordBox_PasswordChanged" />
             </Grid>
 
             <Button
