--- a/src/RBACSample/Presentations/Views/Pages/RegisterPage.xaml
+++ b/src/RBACSample/Presentations/Views/Pages/RegisterPage.xaml
@@ -19,12 +19,22 @@
             HorizontalAlignment="Center"
             VerticalAlignment="Center">
             <TextBlock Margin="0,0,0,10" Text="Username" />
-            <TextBox Margin="0,0,0,20" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBox Margin="0,0,0,20" Text="{Binding Username}" />
+
+            <TextBlock Margin="0,0,0,10" Text="Email" />
+            <TextBox Margin="0,0,0,20" Text="{Binding Email}" />
 
             <TextBlock Margin="0,0,0,10" Text="Password" />
             <PasswordBox x:Name="PasswordBox" Margin="0,0,0,20" />
+
             <TextBlock Margin="0,0,0,10" Text="Confirm Password" />
             <PasswordBox x:Name="ConfirmPasswordBox" Margin="0,0,0,20" />
+
+            <TextBlock Margin="0,0,0,10" Text="Role Type" />
+            <ComboBox
+                ItemsSource="{Binding RoleType}"
+                SelectedIndex="0"
+                SelectedItem="{Binding SelectedRoleType}" />
 
             <TextBlock
                 Margin="0,0,0,10"
