改用 Usercontrol 做的 view，移除 Page。

--- a/src/RBACSample/Presentations/Views/MainWindow.xaml
+++ b/src/RBACSample/Presentations/Views/MainWindow.xaml
@@ -14,6 +14,6 @@
     mc:Ignorable="d">
 
     <Grid>
-        <Frame Content="{Binding CurrentPage}" />
+        <ContentControl Content="{Binding CurrentPage}" />
     </Grid>
 </Window>
