--- a/src/RBACSample/Presentations/Views/Pages/DashboardView.xaml
+++ b/src/RBACSample/Presentations/Views/Pages/DashboardView.xaml
@@ -1,18 +1,20 @@
-﻿<Page
-    x:Class="RBACSample.Views.Pages.DashboardPage"
+﻿<UserControl
+    x:Class="RBACSample.Presentations.Views.Pages.DashboardView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="clr-namespace:RBACSample.Presentations.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:RBACSample.Presentations.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="clr-namespace:RBACSample.ViewModels"
-    Title="DashboardPage"
     d:DataContext="{d:DesignInstance viewmodels:DashboardViewModel}"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
     mc:Ignorable="d">
 
-    <Page.Resources>
+    <UserControl.Resources>
         <converters:UserTypeToBooleanConverter x:Key="UserTypeToBooleanConverter" />
-    </Page.Resources>
+    </UserControl.Resources>
 
     <Border
         d:Background="White"
@@ -66,4 +68,4 @@
             </UniformGrid>
         </Grid>
     </Border>
-</Page>
+</UserControl>
