--- a/src/RBACSample/Presentations/Views/Pages/LoginView.xaml
+++ b/src/RBACSample/Presentations/Views/Pages/LoginView.xaml
@@ -1,14 +1,15 @@
-﻿<Page
-    x:Class="RBACSample.Views.LoginPage"
+﻿<UserControl
+    x:Class="RBACSample.Presentations.Views.Pages.LoginView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:helper="clr-namespace:RBACSample.Shared.Helpers"
-    xmlns:local="clr-namespace:RBACSample.Views"
+    xmlns:local="clr-namespace:RBACSample.Presentations.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="clr-namespace:RBACSample.ViewModels"
-    Title="LoginPage"
     d:DataContext="{d:DesignInstance viewmodels:LoginViewModel}"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
     mc:Ignorable="d">
 
     <Border
@@ -73,4 +74,4 @@
             <TextBlock Margin="0,0,0,8" Text="{Binding Infomation}" />
         </StackPanel>
     </Border>
-</Page>
+</UserControl>
