--- a/src/RBACSample/Presentations/Views/Pages/RegisterView.xaml
+++ b/src/RBACSample/Presentations/Views/Pages/RegisterView.xaml
@@ -1,13 +1,14 @@
-﻿<Page
-    x:Class="RBACSample.Views.Pages.RegisterPage"
+﻿<UserControl
+    x:Class="RBACSample.Presentations.Views.Pages.RegisterView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:RBACSample.Views.Pages"
+    xmlns:local="clr-namespace:RBACSample.Presentations.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="clr-namespace:RBACSample.ViewModels"
-    Title="RegisterPage"
     d:DataContext="{d:DesignInstance viewmodels:RegisterViewModel}"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
     mc:Ignorable="d">
 
     <Border
@@ -57,4 +58,4 @@
             </Grid>
         </StackPanel>
     </Border>
-</Page>
+</UserControl>
